kube/spark-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-submit-svc
spec:
  type: NodePort
  selector:
    app: spark-master
  ports:
    - port: 7077
      targetPort: 7077
      nodePort: 30077
